# LOAHW_BOT

./: Cargo.toml
src/: commands.rs  database_handler.rs  embed_pages.rs  loa_contents.rs  main.rs  user_info.rs  utils.rs
src/command_handler/: command_data.rs  command_handler.rs  command_return.rs  mod.rs
src/command_handler/commands/: character_delete.rs  character_query.rs  homework_update.rs  launch.rs  mod.rs  reset_weekly.rs  user_init.rs  user_register.rs  user_reset.rs  user_update.rs
src/crawler/: mod.rs  profile_parser.rs  profile_parser_api.rs
src/event_handler/: event_handler.rs
