[package]
name = "loahw_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.serenity]
default-features = false
features = ["builder", "chrono", "client", "cache", "gateway", "http", "model", "utils", "rustls_backend"]
version = "0.11"

[dependencies.poise]
version = "0.3.0"

